# learn-sfml

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  premake5.lua
Application/src/: Border.cpp  Game.cpp  Game.hpp  Snake.cpp  Snake.hpp  World.hpp
Application/src/menu/: MenuItem.cpp  MenuItem.hpp  MenuState.cpp  MenuState.hpp
Application/src/snake/: Border.hpp  Snake.hpp  World.cpp  World.hpp
Application/src/state/: GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  SnakeGameState.cpp  SnakeGameState.hpp
src/: Apple.hpp  Border.cpp  Border.hpp  Game.cpp  Game.hpp  Snake.cpp  Snake.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  main.cpp
